# python-project

./: .gitignore  README.md  pyproject.toml  tox.ini
docs/: design.md  overview.rst  requirement.md
docs/source/: conf.py
output_directory/: output.json
src/: API.rst  acquire.py  extract.py  main.py  model.py
tests/: environment.py  test_acceptance.py  unit_test.py
tests/features/: extract_data.feature
tests/steps/: extract_data_steps.py
tests/unit/: test_acquire.py  test_extract.py  test_model.py
