[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "project_one"
version = "0.1.1"
description = "CLI applicationsto extract data from CSV file and restructure it back."
authors = [{ name = "Abiodun Adebisi" }]
dependencies = [
    'pytest',
    'behave',
    'tomli'
]

[tool.taskipy.tasks]
docs = "sphinx-build -b html docs/source docs/build/html"

[tool.pytest.ini_options]
pythonpath = ["."]
